# rpwm

./: hello.py  pyproject.toml
dgp/: diagonal.py
streamlit/dgp/: app.py
utils/: visualization.py
